--- a/build.gradle
+++ b/build.gradle
@@ -28,10 +28,12 @@ allprojects {
     ext {
         appName = 'rl1'
         gdxVersion = '1.9.8'
-        roboVMVersion = '2.3.5'
-        box2DLightsVersion = '1.4'
         aiVersion = '1.8.0'
         artemisODBVersion = '2.1.0'
+        artemisODBContribVersion = '2.2.0'
+        asciiPanelVersion = 'master-SNAPSHOT'
+        picoCLIVersion = '3.7.0'
+        slf4jVersion = '1.7.25'
     }
 
     repositories {
@@ -40,6 +42,7 @@ allprojects {
         google()
         maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
         maven { url 'https://oss.sonatype.org/content/repositories/releases/' }
+        maven { url 'https://jitpack.io' }
     }
 }
 
@@ -50,7 +53,6 @@ project(':desktop') {
         compile project(':core')
         compile "com.badlogicgames.gdx:gdx-backend-lwjgl:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
-        compile "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-desktop"
         compile "com.badlogicgames.gdx:gdx-tools:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-desktop"
         
@@ -64,12 +66,18 @@ project(':core') {
     dependencies {
     
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
-        compile "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
-        compile "com.badlogicgames.box2dlights:box2dlights:$box2DLightsVersion"
         compile "com.badlogicgames.gdx:gdx-ai:$aiVersion"
         
-        compile "net.onedaybeard.artemis:artemis-odb:${artemisODBVersion}"
+        compile "net.onedaybeard.artemis:artemis-odb:$artemisODBVersion"
+        compile "net.mostlyoriginal.artemis-odb:contrib-core:$artemisODBContribVersion"
+        compile "net.mostlyoriginal.artemis-odb:contrib-eventbus:$artemisODBContribVersion"
+        compile "com.github.trystan:AsciiPanel:$asciiPanelVersion"
+		compile "info.picocli:picocli:$picoCLIVersion"
+        
+		compile "org.slf4j:slf4j-api:$slf4jVersion"
+		compile "org.slf4j:slf4j-simple:$slf4jVersion"
+		
         
     }
 }
